src/test/ui/issues/issue-2849.rs
enum Foo { Alpha, Beta(isize) }

fn main() {
    match Foo::Alpha {
      Foo::Alpha | Foo::Beta(i) => {}
      //~^ ERROR variable `i` is not bound in all patterns
    }
}
